# financials

./: .env.template  .gitignore  CLAUDE.md  README.md  analyze_pdf.py  barclays.py  boa.py  categorize.py  main.py  memo.py  paypal.py  pyproject.toml  requirements.txt  schwab.py  serve_frontend.py  test_fmt_sankeymatic.py  utils.py
.claude/: settings.json
data/: README.md
frontend/: README.md
frontend_react/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend_react/src/: App.tsx  index.css  types.ts
frontend_react/src/components/: ExportButtons.tsx  InputPanel.tsx  SankeyDiagram.tsx  SettingsPanel.tsx
frontend_react/src/lib/: colors.ts  format.ts  parser.ts  settings.ts  url.ts
