[project]
name = "financials"
version = "0.1.0"
description = "AI Assisted Financial Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lzstring>=1.0.4",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
